Implement POC using ember-tether
This is a rough work in progress that demonstrates tethered modal positioning using ember-tether.

- ember-tether does not yet support Ember views as a target, so that test is commented out
- Ember test helpers can't see the tethered content (last child before the body tag), so we're falling back to plain JQuery CSS selector matching

But everything seems to be behaving.

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   "dependencies": {
     "ember-cli-babel": "4.1.0",
     "ember-cli-htmlbars": "^0.7.4",
-    "ember-wormhole": "^0.3.1"
+    "ember-wormhole": "^0.3.1",
+    "ember-tether": "0.0.0"
   },
   "keywords": [
     "ember-addon"
