--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "ember-cli-qunit": "0.3.9",
     "ember-cli-sass": "3.1.1",
     "ember-cli-uglify": "1.0.1",
-    "ember-code-snippet": "^1.0.2",
+    "ember-code-snippet": "chrislopresto/ember-code-snippet#support-css-scss",
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
     "ember-try": "0.0.3",
@@ -37,7 +37,7 @@
     "ember-cli-babel": "4.1.0",
     "ember-cli-htmlbars": "^0.7.4",
     "ember-wormhole": "^0.3.1",
-    "ember-tether": "0.0.0"
+    "ember-tether": "chrislopresto/ember-tether"
   },
   "keywords": [
     "ember-addon"
